--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -564,6 +564,12 @@
         }
     }
 
+    .ourProducts {
+        .ourProductsCenter {
+            width: unset;
+        }
+    }
+
     .aboutUs {
         height: 990px;
 
