--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -771,7 +771,7 @@
                 margin-top: 3rem;
 
                 button {
-                    background-color: #8dc63f;
+                    background: linear-gradient(to right, #8dc63f, #00894f);
                     width: 220px;
                     height: 35px;
                     border-radius: 20px;
