--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -17,6 +17,7 @@
     position: relative;
     height: 650px;
     padding-left: 80px;
+    margin-bottom: 40px;
 
     .background {
         position: absolute;
